@@ -67,9 +67,9 @@ public class ManagerFileTransferListenerImpl implements FileTransferListener {
 			// If it's the candidate from the Optimization Tool
 			} else if(request.getRequestor().toString().startsWith("optimization")) {
 				try { 
-					ProcessBuilder pb = new ProcessBuilder("sh", "/home/cpswarm/Desktop/ros/ros.sh");
+					Process proc = Runtime.getRuntime().exec("sh /home/cpswarm/Desktop/ros/ros.sh");
 					//pb.directory(new File("/home/cpswarm/Desktop/ros/"));
-					Process proc = pb.start();
+					//Process proc = pb.start();
 					int result = proc.waitFor();
 					if(result == 0) {
 					/*	proc = Runtime.getRuntime().exec("gazebo "+ this.dataFolder + this.parent.getSimulationID() + ".sdf");
